# TsChan

./: .gitignore  README.md  TEMPLATES.md  install.sh  pyproject.toml
bot/: Dockerfile  pyproject.toml  requirements.txt
bot/melodify_ts_bot/: command_service.py  config.py  duration_parser.py  errors.py  logging_utils.py  main.py  melodify_client.py  models.py  ops_api.py  queue_manager.py  stream_proxy.py  teamspeak_gateway.py  teamspeak_runtime.py  ts3audiobot_client.py
bot/tests/: test_command_service.py  test_duration_parser.py  test_integration_playback_flow.py  test_melodify_client.py  test_ops_api.py  test_queue_manager.py  test_stream_proxy.py  test_ts3audiobot_client.py
tests/: test_channels.py  test_config_writer.py  test_docker_ctl.py  test_models.py  test_project.py  test_roles.py  test_ts3_query.py  test_tui_setup.py
tschan/: __init__.py  __main__.py  cli.py  constants.py  models.py  project.py
tschan/engine/: __init__.py  config_writer.py  docker_ctl.py  ts3_query.py
tschan/templates/: __init__.py  channels.py  roles.py
tschan/tui/: __init__.py  app.py
tschan/tui/screens/: __init__.py  deploying.py  management.py  privilege_key.py  review.py  setup_wizard.py
tschan/tui/styles/: __init__.py  theme.tcss
