[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tschan"
version = "1.0.0"
description = "🌸 TeamSpeak 3 Template Generator — anime waifu edition"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "textual>=0.85",
    "rich>=13.0",
]

[project.scripts]
tschan = "tschan.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
